# laissez-faire

./: .gitignore  README.md  pyproject.toml  run.py  symignore.txt
.zcode/plans/: plan-sess_03189dfa-ea94-45ae-af69-7cf151c20729.md  plan-sess_2bf65131-82a3-4d48-9581-1762e950fda2.md  plan-sess_89a4d465-80f1-45d4-820a-b61ccc954f3d.md
log/: balance.txt  command.py  command.txt  state.txt
src/: TA_Lib-0.4.28-cp38-cp38-win_amd64.whl  __init__.py  __main__.py  avg_sell_slot.py  budget.py  command_sync.py  config.py  cycle_runner.py  engine.py  focus.py  json_util.py  laissez-faire.py  parallel.py  paths.py  state.py  ta_lib-0.6.7-cp39-cp39-win_amd64.whl  worker_pool.py
