[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "laissez-faire"
version = "2.2.0"
description = "Upbit/Bithumb automated trading bot"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "requests",
  "colorama",
  "tqdm",
  "websocket-client",
]

[project.optional-dependencies]
fast = ["orjson"]

[project.scripts]
laissez-faire = "laissez_faire.__main__:main"

[tool.setuptools]
packages = ["laissez_faire"]

[tool.setuptools.package-dir]
laissez_faire = "src"
